# rust-tags

./: CHANGELOG.md  Cargo.toml  LICENSE  README.md
.github/workflows/: build.yml
src/: audio_file.rs  common.rs  flow.rs  main.rs  model.rs  tags.rs  tags_file.rs
src/tags/: dsf_tag_io.rs  flac_tag_io.rs  id3_common.rs  id3_tag_io.rs  m4a_tag_io.rs
