[package]
name = "tags"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
metaflac = "0.2"
unicode-normalization = "0.1.19"
regex = "1.5.6"
once_cell = "1.12.0"
imghdr = "0.7.0"
id3 = "1.2.0"
dsf = "0.2.2"
mp4ameta = "0.11.0"
thiserror = "1.0.31"
anyhow = "1.0.58"
